# llm_eval_physics

./: .gitignore  README.md  activate_env.sh  pyproject.toml
.github/workflows/: main.yml
data/inputs/: hseb12_modelqs.jsonl
data/outputs/: Scores.csv  Scores.xlsx  example.html  gemini_solutions.html  meta.llama3-70b-instruct-v1:0_solutions.html  oai4o_solutions.html
scripts/: extract.py  query_api.py
src/llm_eval_physics/: __init__.py  config.py  data_loader.py  generator.py  message_builder.py  prompt_template.yaml  utils.py
tests/: test_data_loader.py
